--- a/profile.css
+++ b/profile.css
@@ -53,20 +53,22 @@ body {
         font-weight: bolder;
         font-size: 23px;
     }
+
+    .question-tag {
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 25px;
+    }
+
+    .radio-form {
+        font-size: 15px;
+        text-align: center;
+    }
+   
  
  
  
  
  
  
-  /* .header-tag {
-    width: 500px;
-    padding: 20px;
-    text-align: center;
-    position: absolute;
-    background: url(https://thinkpodagency.com/wp-content/uploads/2015/10/blog-signup-background.jpg);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  } */
+
 
