--- a/signup.css
+++ b/signup.css
@@ -1,6 +1,6 @@
 body {
     background: url(https://www.faarmembers.com/wp-content/uploads/2019/01/trivia-background.jpg);
-    background-size:      cover;                      
+    background-size:      auto;                      
     background-repeat:   no-repeat;
     background-position: top; 
 }  
@@ -10,17 +10,21 @@ body {
     padding: 20px;
     text-align: center;
     position: absolute;
-    background: url(https://thinkpodagency.com/wp-content/uploads/2015/10/blog-signup-background.jpg);
+    background: url(https://ae01.alicdn.com/kf/HTB1.N60SXXXXXcRXpXXq6xXFXXXK/10x10FT-Dark-Orange-Chocolate-Wooden-Wall-Wood-Props-Custom-Backgrounds-Photography-Studio-Backdrops-Digital-Prints-Vinyl.jpg_640x640q70.jpg);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border-radius: 10%;
+    box-shadow: 0 10px 2px rgba(0,0,0,0.3);
   }
 
   .sign-up-form h1 {
-      color: white;
+      color: rgb(255, 255, 255);
       font-size: 45px;
-      font-family: 'Pacifico', cursive;
+      font-family: 'Luckiest Guy', cursive;
       text-decoration: none;
+      text-shadow: 0 8px 2px rgba(0,0,0,0.3);
+
   }
 
   .sign-up-form input,
@@ -30,31 +34,60 @@ body {
       padding: 0 16px;
       height: 44px;
       color: black;
-      font-size: 15px;
+      font-size: 13px;
       box-sizing: border-box;
+      font-family: 'Luckiest Guy', cursive;
+      box-shadow: 0 10px 2px rgba(0,0,0,0.3);
   }
+
+  #entrybox:hover {
+    font-size: 14px;
+  }
+
   .txtb{
     margin: 20px 0;
-    background: rgba(255,255,255,.5);
     border-radius: 6px;
   }
+
+  input[type=text] {
+    border-color: rgba(0, 0, 0, .15);
+    background-color: white;
+    font-size: 12px;
+  }
+
+  input[type=text]:hover {
+    font-size: 14px;
+  }
+
   .signup-btn{
     margin-top: 60px;
     margin-bottom: 20px;
-    background: #487eb0;
-    color: #fff;
+    background: rgba(102, 226, 30, 0.7);
+    color: black;
     border-radius: 44px;
     cursor: pointer;
     transition: 0.8s;
     text-align: center;
     font-family: 'Luckiest Guy';
+    box-shadow: 0 10px 2px rgba(0,0,0,0.3);
   }
   .signup-btn:hover{
-    transform: scale(0.96);
+    transform: scale(1.05);
+    font-family: 'Luckiest Guy';
   }
   .sign-up-form :hover{
-    background: rgba(185, 182, 182, 0.3);
+    /* background: rgba(185, 182, 182, 0.3); */
+      background: rgb(227, 222, 222);
   }
   .sign-up-form h1:hover {
       background: none;
+  }
+
+  #signupbutton:hover {
+    background: rgba(102, 226, 30, 0.7);
+    font-size: 25px;
+  }
+
+  #signupbutton {
+    font-size: 20px;
   }
