--- a/profile.css
+++ b/profile.css
@@ -16,7 +16,8 @@ p {
         /* -webkit-text-fill-color: transparent; */
         font-family: 'Luckiest Guy', cursive;
         color: #4e3043;
-        padding: 10px 50px;
+        padding: 100px 50px;
+        padding-bottom: 100px;
         
     }
     .scoreboard {
@@ -32,7 +33,7 @@ p {
     }
 
     .app button {
-        width: 50%;
+        width: 30%;
         padding: 8px 5px;
     
     /* Styles */
@@ -62,9 +63,9 @@ p {
 
     .question-tag {
         font-family: 'Luckiest Guy', cursive;
-        font-size: 25px;
+        font-size: 35px;
         color: #4e3043;
-        padding: 90px 50px;
+        padding: 150px 50px;
 
     }
 
@@ -73,7 +74,25 @@ p {
         text-align: center;
         font-family: 'Luckiest Guy', cursive;
     }
+
+    #buttona:hover {
+        font-size: 25px;
+
+    }
    
+    #buttonb:hover {
+        font-size: 25px;
+
+    }
+
+    #buttonc:hover {
+        font-size: 25px;
+
+    }
+
+    #buttond:hover {
+        font-size: 25px;
+    }
  
  
  
